recursion.logo.polygonfractal.PolygonFractal.scala.error
Erreur de compilation :
PolygonFractal:1: error: Missing closing brace `}' assumed here
def polygonFractal (levels:Int, sides:Int, length:Double, shrink:Double) {
^PolygonFractal:1: error: expected class or object definition
def polygonFractal (levels:Int, sides:Int, length:Double, shrink:Double) {
^